--- a/daw.webapp12/src/main/resources/application.properties
+++ b/daw.webapp12/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.datasource.url=jdbc:mysql://localhost/daw_webapp12?useUnicode=true&useJDB
 spring.datasource.username=root
 spring.datasource.password=13777091825
 server.port=8443
+server.ssl.key-store = classpath:keystore.jks
+server.ssl.key-store-password = password
+server.ssl.key-password = secret
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
