Add Spring Security

--- a/daw.webapp12/src/main/resources/templates/prepros-6.config
+++ b/daw.webapp12/src/main/resources/templates/prepros-6.config
@@ -376,7 +376,7 @@
       "keepAlive": true,
       "host": "",
       "port": 21,
-      "user": "",
+      "users": "",
       "password": ""
     },
     "sftp": {
