--- a/daw.webapp12/pom.xml
+++ b/daw.webapp12/pom.xml
@@ -75,7 +75,10 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
     </dependencies>
-
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
 	<build>
 		<plugins>
 			<plugin>
