--- a/daw.webapp12/src/main/resources/application.properties
+++ b/daw.webapp12/src/main/resources/application.properties
@@ -12,3 +12,13 @@ logging.level.org.hibernate.SQL=debug
 spring.mustache.suffix=.html
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=ruvik12@gmail.com
+spring.mail.password=webapp12
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
