--- a/daw.webapp12/src/main/resources/application.properties
+++ b/daw.webapp12/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ruvik12@gmail.com
+spring.mail.username=ruvikwebapp12@gmail.com
 spring.mail.password=webapp12
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
