--- a/daw.webapp12/pom.xml
+++ b/daw.webapp12/pom.xml
@@ -11,9 +11,9 @@
 	<groupId>com.daw.webapp12</groupId>
 	<artifactId>daw.webapp12</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>daw.webapp12</name>
 	<description>DAW project</description>
-
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -89,8 +89,20 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+						<configuration>
+							<classifier>spring-boot</classifier>
+							<mainClass>
+							com.daw.webapp12.Application
+							</mainClass>
+						</configuration>
+					</execution>
+			</executions>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
