Create image fixed
script to create new jar updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mysql:
-    image: mysql/mysql-server:latest
+    image: mysql # mysql/mysql-server:latest
     container_name: c_mysql
     ports:
       - 3306:3306
